feat: Add hero section without layout of bottom

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,6 @@ $heading_fourth: 2rem;
 $paragraph_large: 1.6rem;
 $paragraph_regular: 1.4rem;
 $paragraph_small: 1.2rem;
+
+$medium_gray: #f0f0f0;
+$light_gray: #f2f0f1;
