--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,8 @@
   border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
   display: flex;
   justify-content: space-between;
-  padding: 1.5rem 0;
+  padding: 2.4rem 1.6rem 1.5rem;
+
   position: relative;
   z-index: 9999;
 
