feat: Replace img of hero. Add brand block

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -2,6 +2,7 @@
 .hero {
   background-color: variables.$medium_gray;
   font-family: "Satoshi", sans-serif;
+  overflow: hidden;
 
   &__textbox {
     padding: 4rem 1.6rem 0;
@@ -67,11 +68,22 @@
 
     &_small {
       width: 4.4rem;
+      top: 30%;
+      left: 6%;
     }
 
     &_big {
       width: 7.6rem;
-      left: 93%;
+      left: 75%;
     }
+  }
+
+  &__brand-block {
+    background-color: #000000;
+    padding: 3.9rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3.4rem;
   }
 }
