feat: Add block of clothes

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -3,6 +3,7 @@
   background-color: variables.$medium_gray;
   font-family: "Satoshi", sans-serif;
   overflow: hidden;
+  margin-bottom: 5rem;
 
   &__textbox {
     padding: 4rem 1.6rem 0;
