--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,9 @@ body {
   font-size: 1.6rem;
   font-family: "Integral CF", sans-serif;
 }
+
+.horizontal-rule_section {
+  width: 91vw;
+  margin: 0 auto 4rem;
+  color: rgba($color: #000000, $alpha: 0.1);
+}
