--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -11,6 +11,12 @@
     color: #fff;
   }
 
+  &__white {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid rgba($color: #000000, $alpha: 0.1);
+  }
+
   &__wide {
     padding: 1.6rem 5.4rem;
     width: 91vw;
