--- a/src/components/DressStyleBlock/DressStyleBlock.module.scss
+++ b/src/components/DressStyleBlock/DressStyleBlock.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables";
+
 .card {
   background-color: #fff;
   border-radius: 2rem;
@@ -14,6 +15,7 @@
     object-fit: fill;
     width: 100%;
   }
+
   &__title {
     font-family: "Satoshi", sans-serif;
     font-size: variables.$heading_third;
@@ -22,6 +24,7 @@
     position: absolute;
   }
 }
+
 .dress-style {
   background-color: #f0f0f0;
   border-radius: 2rem;
@@ -33,10 +36,26 @@
     margin-bottom: 2.8rem;
     padding: 0 5.6rem;
     text-align: center;
+    font-size: variables.$heading_second;
   }
+
   &__items {
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .dress-style {
+    &__heading {
+      font-size: variables.$t_heading_second;
+    }
+  }
+
+  .card {
+    &__title {
+      font-size: variables.$t_heading_third;
+    }
   }
 }
