--- a/src/components/Footer/SubscriptionBlock/SubscriptionBlock.module.scss
+++ b/src/components/Footer/SubscriptionBlock/SubscriptionBlock.module.scss
@@ -27,3 +27,15 @@
     padding: 1.2rem 1.6rem;
   }
 }
+
+@media (min-width: 480px) {
+  .subscription {
+    &__heading {
+      font-size: variables.$t_heading_second;
+    }
+
+    &__button {
+      font-size: variables.$t_paragraph_regular;
+    }
+  }
+}
