--- a/src/components/Hamburger/Hamburger.module.scss
+++ b/src/components/Hamburger/Hamburger.module.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   width: 2.4rem;
   z-index: 10;
+  margin-right: 4.1vw;
 
   &__line {
     background-color: black;
@@ -16,5 +17,11 @@
     transform-origin: 1px;
     transition: all 0.3s linear;
     width: 2rem;
+  }
+}
+
+@media (min-width: 600px) {
+  .hamburger {
+    display: none;
   }
 }
