--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,21 +1,31 @@
 @use "../../styles/variables";
+
 .header {
   align-items: center;
   border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 2.4rem 1.6rem 1.5rem;
-
   position: relative;
   z-index: 9999;
 
   &__logo {
     font-size: variables.$heading_third;
     font-weight: 900;
-    margin-right: 24.5vw;
+    margin-right: clamp(96px, 24.5vw, calc(96px + 20%));
+    padding-bottom: 0.5rem;
   }
+
   &__actions {
     display: flex;
     gap: 1.2rem;
+  }
+}
+
+@media (min-width: 480px) {
+  .header {
+    &__logo {
+      margin-right: calc(23.58vw + 20%);
+    }
   }
 }
