--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -5,6 +5,7 @@
   border: 0;
   font-family: "Satoshi", sans-serif;
 
+
   &[type="email"] {
     background-image: url(../../assets/icons/email.svg);
     background-repeat: no-repeat;
@@ -16,5 +17,11 @@
 
   &:focus {
     outline: none;
+  }
+}
+
+@media (min-width: 480px) {
+  .input {
+    padding: 1.4rem 1.6rem;
   }
 }
