--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,13 +8,24 @@ $paragraph_regular: 1.4rem;
 $paragraph_small: 1.2rem;
 
 $medium_alpha_gray: rgba(
-  $color: #000000,
-  $alpha: 0.6,
+        $color: #000000,
+        $alpha: 0.6,
 );
 $light_alpha_gray: rgba(
-  $color: #000000,
-  $alpha: 0.1,
+        $color: #000000,
+        $alpha: 0.1,
 );
 
 $medium_gray: #f0f0f0;
 $light_gray: #f2f0f1;
+
+// small tablets and smartphones landscape (480px)
+
+$t_heading_first: calc(3.6rem + 2vw);
+$t_heading_second: calc(3.2rem + 1.3vw);
+$t_heading_third: calc(2.4rem + 1.1vw);
+$t_heading_fourth: calc(2rem + 1vw);
+
+$t_paragraph_large: calc(1.6rem + 0.5vw);
+$t_paragraph_regular: calc(1.4rem + 0.7vw);
+$t_paragraph_small: calc(1.2rem + 0.6vw);
