--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -72,7 +72,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (min-width: 480px) {
   .footer {
     &__slogan {
       font-size: variables.$t_paragraph_regular;
