--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -20,12 +20,36 @@
     text-align: center;
     width: 100%;
   }
+
   li {
     padding: 1rem 0;
     width: 100%;
+    flex-shrink: 1;
 
     &:not(:last-child) {
       border-bottom: 1px solid variables.$light_alpha_gray;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .nav {
+    background-color: transparent;
+    position: relative;
+    order: 0;
+    transform: none;
+    left: auto;
+
+    ul {
+      flex-direction: row;
+      flex-wrap: nowrap;
+      margin: 0;
+    }
+
+    li {
+      &:not(:last-child) {
+        border-bottom: none;
+      }
     }
   }
 }
